# drone_flight_log

./: .gitignore  .last_build_id  GOOGLE_CALENDAR_SETUP.md  IMPLEMENTATION_NOTES.md  PROJECT_SUMMARY.txt  README.md  analysis_options.yaml  flutter_bootstrap.js  index.html  manifest.json  pubspec.yaml  version.json
.claude/: settings.local.json
assets/: NOTICES
dips_proxy/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
dips_proxy/app/: config.py  main.py
dips_proxy/app/api/: dips_client.py  router.py
dips_proxy/app/auth/: oidc.py  router.py  token_store.py
dips_proxy/deploy/: 01_initial_setup.sh  02_deploy_app.sh  03_setup_https.sh
dips_proxy/dips_proxy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dips_proxy/tests/: test_api_endpoints.py  test_auth_callback_get.py  test_auth_oidc.py  test_config.py  test_token_store.py
docs/: DIPS2.0_API_Application_Forms.xlsx  DIPS2.0_API連携_設計書.md  DIPS2_Application_Guide.md  DIPS2_Application_v4.xlsx  DIPS2_Design_Document.md  LOLIPOP_VPN_CANCEL_GUIDE.md  PROJECT_STATUS.md
lib/: app.dart  main.dart
lib/core/constants/: app_constants.dart
lib/core/database/: .keep  app_database.dart  app_database.g.dart  flight_log_storage.dart  local_storage.dart  location_history_storage.dart
lib/core/providers/: theme_provider.dart
lib/core/services/: aircraft_safety_service.dart  anonymize_export_service.dart  app_lock_service.dart  audit_log_service.dart  auto_backup_service.dart  backup_service.dart  csv_service.dart  (+20 more)
lib/routing/: app_router.dart
test/: widget_test.dart
web/: index.html
(+55 files in other folders)
